# motor_tributario_py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
motor_tributario_py/: __init__.py  audit.py  facade.py  models.py
motor_tributario_py/rules/: credito_icms_rules.py  csosn_rules.py  cst_post_processing_rules.py  cst_rules.py  difal_rules.py  fcp_rules.py  fcp_st_rules.py  ibpt_rules.py  ibs_cbs_rules.py  icms_desonerado_rules.py  icms_efetivo_rules.py  icms_monofasico_rules.py  icms_rules.py  icms_st_rules.py  ipi_rules.py  issqn_rules.py  pis_cofins_rules.py
motor_tributario_py/taxes/: cofins.py  credito_icms.py  csosn.py  difal.py  fcp.py  fcp_st.py  ibpt.py  ibs_cbs.py  icms.py  icms_desonerado.py  icms_efetivo.py  icms_monofasico.py  icms_st.py  ipi.py  issqn.py  pis.py
motor_tributario_py/utils/: functions.py
scripts/: cross_check_tests.py  embed_rules_into_readme.py  extract_csharp_tests.py
tests/: fixtures.json  test_audit.py  test_data_driven.py
